--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@greymass/eosio": "^0.6.11",
     "@prisma/client": "^4.13.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
