--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@greymass/eosio": "^0.6.11",
     "@prisma/client": "^4.13.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "ethers": "^6.3.0",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
