--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^16.0.3",
     "ethers": "^6.3.0",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "web3": "^1.9.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.16.3",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
